plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
}

// 모든 서브프로젝트 공통 설정
subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'       // bootJar 태스크 등록 (apply false 아님)
    apply plugin: 'io.spring.dependency-management'

    // 서브모듈 기본값: plain jar만 생성, bootJar 비활성
    // app/build.gradle 에서 bootJar { enabled = true } 로 오버라이드
    bootJar { enabled = false }
    jar     { enabled = true  }

    group   = 'com.company'
    version = '1.0.0'

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.2.5"
        }
    }

    dependencies {
        compileOnly    'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    test {
        useJUnitPlatform()
    }
}
